# TrackingDrone

./: .gitignore  .gitmodules  README.md  Readme.md  launch.sh  notes.txt
simulation/: README.md  camera_ext.py  ros2_gz.repos
simulation/osm_environment/: model.config  model.sdf
src/: .gitignore
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/action/: Track.action
src/common_msgs/msg/: ChangeTarget.msg  Detection.msg  Detections.msg
src/common_msgs/srv/: ChangeTarget.srv
src/detect_and_track_bringup/: CMakeLists.txt  package.xml
src/detect_and_track_bringup/config/: detection_and_mot_params.yaml  moc_video_publisher_params.yaml  stream_manager_real_params.yaml  stream_manager_sim_params.yaml  video_manager_params.yaml
src/detect_and_track_bringup/launch/: bringup.launch.py
src/detection_and_mot/: .gitignore  CMakeLists.txt  README.md  package.xml
src/detection_and_mot/include/detection_and_mot/: YOLO.hpp  point.hpp
src/detection_and_mot/include/ocsort/: KalmanFilter.hpp
src/detection_and_mot/resources/: coco_mod.names
src/detection_and_mot/src/: detection_and_mot_node.cpp
src/moc_video_publisher/: package.xml  setup.cfg  setup.py
src/moc_video_publisher/moc_video_publisher/: moc_video_publisher_node.py
src/my_package/: package.xml
src/track_controller/: CMakeLists.txt  package.xml
src/track_controller/include/track_controller/: track_controller.hpp
src/track_controller/src/: track_controller.cpp
src/video_manager/: CMakeLists.txt  README.md  package.xml
src/video_manager/include/video_manager/: draw.hpp  video_manager.hpp
src/video_manager/launch/: video_manager.launch.py
src/video_manager/scripts/: run_video_manager.sh
src/video_manager/src/: video_manager_node.cpp
