<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>video_manager</name>
  <version>0.0.0</version>
  <description>video_manager package for displaying video frames with metadata overlay from stream_manager topics</description>
  <maintainer email="ahmed.msalah99@gmail.com">stark</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>shm_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>common_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
